--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
   repositories {
-    jcenter()
-    mavenCentral()
+    mavenLocal()
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/google/' }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.2'
