--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -1,6 +1,11 @@
 allprojects {
   repositories {
-    jcenter()
+    repositories {
+      mavenLocal()
+      maven { url 'https://maven.aliyun.com/repository/public/' }
+      maven { url 'https://maven.aliyun.com/repository/google/' }
+      maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
+    }
   }
 }
 
