--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,9 @@
 buildscript {
   repositories {
+    mavenLocal()
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/google/' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
     mavenCentral()
   }
   dependencies {
